fix(jdk17): replace Java 21 List.getFirst() and Thread.threadId() in fulltext/schema/sparsevector code