@@ -244,7 +244,7 @@ class RidScoreMinHeapTest {
   }
 
   private static long measure(final com.sun.management.ThreadMXBean threads, final Runnable body) {
-    final long id = Thread.currentThread().threadId();
+    final long id = Thread.currentThread().getId();
     final long before = threads.getThreadAllocatedBytes(id);
     body.run();
     return threads.getThreadAllocatedBytes(id) - before;
